# YunChat

./: .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yml
.github/workflows/: codacy.yml  codeql.yml  fortify.yml
Docker/: application.yml  nginx.conf
HandSock-Client/: .env.development
HandSock-Server/: pom.xml
YunChat-Android/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
YunChat-Android/app/: build.gradle.kts  proguard-rules.pro
YunChat-Android/core/utils/: build.gradle.kts
YunChat-Android/gradle/: libs.versions.toml
YunChat-Android/gradle/wrapper/: gradle-wrapper.properties
YunChat-Client/: .env.development  README.md  YunChat.d.ts  index.html  package.json  tsconfig.json  vite.config.js
YunChat-Client/src/: YunChat.vue  application.js
YunChat-Client/src-tauri/: Cargo.toml  tauri.conf.json
YunChat-Client/src-tauri/capabilities/: default.json
YunChat-Client/src/assets/: index.less
YunChat-Client/src/dialog/: SettingDialog.vue
YunChat-Client/src/enums/: ApiType.ts  EventType.ts  StorageType.ts  ToastType.ts  UserAuthType.ts
YunChat-Client/src/model/: Authority.vue  LeftSideBar.vue  RightSideBar.vue
YunChat-Client/src/notice/: NoticeContent.vue  NoticeItem.vue
YunChat-Client/src/pages/: AdminView.vue  HomeView.vue  ResultView.vue
YunChat-Client/src/render/: ChatMessage.vue  ChatMessageInfo.vue  TempleteMessage.vue
YunChat-Client/src/router/: index.ts
YunChat-Client/types/: applicationStore.d.ts  env.d.ts  index.d.ts  onelDialogStore.d.ts
YunChat-Server/: pom.xml
(+523 files in other folders)
